--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost/jejueater
+spring.datasource.url=jdbc:mysql://localhost/jejueater?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=UTC&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=king6288
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+mybatis.type-aliases-package: com.comtk.jejueater.mapper
+mybatis.mapper-locations: mapper/*.xml
