--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,7 +6,7 @@ spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 mybatis.mapper-locations: mapper/*.xml
 
 #JPA 설정
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #Dialect 설정
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
